--- a/sass/tooplate-style.scss
+++ b/sass/tooplate-style.scss
@@ -589,7 +589,7 @@ b, strong {
 	}
 
 	.navbar-collapse {
-		background: $text-white;
+		background: #151515;
 		text-align: center;
 		padding-bottom: 20px;
 	}
